src/objects/Affiliation__c.object
<CustomObject>
    <description>Link between a contact and an account which is not the contact&apos;s main account.  Ie. Bill donates through his company (his main account), but is also part of a family which participates in other ways.  You&apos;d want to identify Bill both as a donor through is company and as a member of the family.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To which account is the contact related?</description>
        <inlineHelpText>To which account is the contact related?</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation_Role__c</fullName>
        <description>What is the contact&apos;s role in the account? For example, &quot;father,&quot; or &quot;mail clerk,&quot; or &quot;board chair.&quot;</description>
        <inlineHelpText>What is the contact&apos;s role in the account? For example, &quot;father,&quot; or &quot;mail clerk,&quot; or &quot;board chair.&quot;</inlineHelpText>
        <label>Affiliation Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board Chair</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constant1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact who is affiliated.</description>
        <inlineHelpText>Name of the contact who is affiliated.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>IF( AND(Start_Date__c &lt;= TODAY(), TODAY() &lt;=  End_Date__c) , TRUE, FALSE)</formula>
        <label>Current?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the affiliation ended.  For instance, date that Helen was no longer on the Board.</description>
        <inlineHelpText>Date the affiliation ended.  For instance, date that Helen was no longer on the Board.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the affiliation began.  (For instance, date that Fred began serving on the Board.)</description>
        <inlineHelpText>Date the affiliation began.  (For instance, date that Fred began serving on the Board.)</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>Affiliation {YYYY}{MM}-{0}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>